change connection string; add publish profile

--- a/Project/ItNews/Views/News/Index.cshtml
+++ b/Project/ItNews/Views/News/Index.cshtml
@@ -8,6 +8,7 @@
         <hr />
         <h3>@item.Title</h3>
         <p>@item.Text</p>
-        <p>@item.Date</p>
+        <p>Author: @item.Author</p>
+        <p>Date: @item.Date</p>
     }
 </div>
