--- a/Project/ItNews/Views/Shared/_Layout.cshtml
+++ b/Project/ItNews/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "News")</li>
+                    <li>@Html.ActionLink("Home Page", "Index", "News")</li>
                 </ul>
             </div>
         </div>
@@ -30,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year – itNews</p>
+            <p>&copy; @DateTime.Now.Year – ITNews</p>
         </footer>
     </div>
 
