--- a/Project/ItNews/Views/News/Index.cshtml
+++ b/Project/ItNews/Views/News/Index.cshtml
@@ -11,4 +11,5 @@
         <p>Author: @item.Author</p>
         <p>Date: @item.Date</p>
     }
+    <a href="/News/Index?page&itemCount=1">Next</a>
 </div>
