--- a/Project/ItNews/Views/News/Index.cshtml
+++ b/Project/ItNews/Views/News/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewBag.Title = "News list";
 }
-@model IList<ArticlesListPageItem>
+@model ArticlesList
 <div>
-    @foreach (var item in Model)
+    @foreach (var item in Model.Articles)
     {
         <hr />
         <h3>@item.Title</h3>
@@ -11,5 +11,17 @@
         <p>Author: @item.Author</p>
         <p>Date: @item.Date</p>
     }
-    <a href="/News/Index?page=@ViewData["NextPage"]&itemCount=1">Next</a>
+</div>
+<div>
+    <hr/>
+    <h4>
+        @if (Model.PrevAvailable == true)
+        {
+            @Html.ActionLink("Previous", "Index", new { itemsCount = Model.PageSize, page = Model.PageNumber - 1 });
+        }
+        @if (Model.NextAvailable == true)
+        {
+            @Html.ActionLink("Next", "Index", new { itemsCount = Model.PageSize, page = Model.PageNumber + 1 });
+        }
+    </h4>
 </div>
