--- a/Project/ItNews/Views/News/Index.cshtml
+++ b/Project/ItNews/Views/News/Index.cshtml
@@ -7,7 +7,7 @@
     {
         <hr />
         <h3>@item.Title</h3>
-        <p>@item.Text</p>
+        <p>@item.TextPreview</p>
         <p>Author: @item.Author</p>
         <p>Date: @item.Date</p>
     }
