--- a/Project/ItNews/Views/Article/Index.cshtml
+++ b/Project/ItNews/Views/Article/Index.cshtml
@@ -1,15 +1,17 @@
-﻿@{
+﻿@model ArticlesList
+
+@{
     ViewBag.Title = "News list";
 }
-@model ArticlesList
+
 <div>
     @foreach (var item in Model.Articles)
     {
         <hr />
         <h3>@item.Title</h3>
         <p>@item.TextPreview</p>
-        <p>Author: @item.Author</p>
-        <p>Date: @item.Date</p>
+        <p>@Html.DisplayNameFor(model => item.Author): @item.Author</p>
+        <p>@Html.DisplayNameFor(model => item.Date): @item.Date</p>
     }
 </div>
 <div>
