hotfix "first atricle", change data time view format

--- a/Project/ItNews/Views/News/Index.cshtml
+++ b/Project/ItNews/Views/News/Index.cshtml
@@ -9,7 +9,7 @@
         <h3>@item.Title</h3>
         <p>@item.TextPreview</p>
         <p>Author: @item.Author</p>
-        <p>Date: @item.Date</p>
+        <p>Date: @item.Date.ToString("MM/dd/yyyy | HH:mm")</p>
     }
 </div>
 <div>
