--- a/Project/ItNews/Views/Shared/LoginPartial.cshtml
+++ b/Project/ItNews/Views/Shared/LoginPartial.cshtml
@@ -13,7 +13,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", "", new { @class = "navbar-brand" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", "", new { @class = "navbar-brand" })</li>
+        <li>@Html.ActionLink("Sign up", "Register", "Account", "", new { @class = "navbar-brand" })</li>
+        <li>@Html.ActionLink("Sign in", "Login", "Account", "", new { @class = "navbar-brand" })</li>
     </ul>
 } 
