add link to Article; rename viewmodels

--- a/Project/ItNews/Views/Article/Details.cshtml
+++ b/Project/ItNews/Views/Article/Details.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model ItNews.MVC.ViewModels.News.ArticleDetailsViewModel
+﻿﻿@model ArticleDetailsViewModel
 @{
     ViewBag.Title = "Details";
 }
