--- a/Project/ItNews/Views/Article/Index.cshtml
+++ b/Project/ItNews/Views/Article/Index.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model ArticlesList
+﻿﻿@model ArticlesListViewModel
 @{
     ViewBag.Title = "News list";
 }
@@ -6,7 +6,7 @@
     @foreach (var item in Model.Articles)
     {
         <hr />
-        <h3>@item.Title</h3>
+        <h4>@Html.ActionLink(item.Title,"Details", new { id = item.Id })</h4>
         <p>@item.TextPreview</p>
         <p>@Html.DisplayNameFor(model => item.Author): @item.Author</p>
         <p>@Html.DisplayNameFor(model => item.Date): @item.Date</p>
@@ -19,7 +19,7 @@
         {
             if (i == Model.PageNumber)
             {
-                @Convert.ToString(i);
+                @i.ToString()
             }
             else
             {
