--- a/Project/ItNews/Views/Article/Details.cshtml
+++ b/Project/ItNews/Views/Article/Details.cshtml
@@ -13,16 +13,22 @@
         <dd>
             @Html.DisplayFor(model => model.Title)
         </dd>
-        @if (Model.Image != null)
+        @if (Model.HasImage)
         {
             <dt>
                 @Html.DisplayNameFor(model => model.Image)
             </dt>
 
             <dd>
-                <img src="@Model.Image" alt="Image" />
+                <img src="@Model.Image" alt="Image" style="width:600px; height: auto;"/>
             </dd>
         }
+        <dt>
+            @Html.DisplayNameFor(model => model.Content)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Content)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.AuthorName)
         </dt>
