--- a/Project/ItNews/Views/Article/Details.cshtml
+++ b/Project/ItNews/Views/Article/Details.cshtml
@@ -20,7 +20,7 @@
             </dt>
 
             <dd>
-                <img src="@Model.Image" alt="Image" style="width:600px; height: auto;"/>
+                <img src="@Model.Image" alt="Image" style="width:600px; height: auto;" />
             </dd>
         }
         <dt>
@@ -44,6 +44,9 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @if (Model.CanEdit)
+    {
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+    }
     @Html.ActionLink("Back to List", "Index")
 </p>
