--- a/Project/ItNews/Views/Article/Details.cshtml
+++ b/Project/ItNews/Views/Article/Details.cshtml
@@ -20,7 +20,7 @@
             </dt>
 
             <dd>
-                <img src="@Model.Image" alt="Image" style="width:600px; height: auto;" />
+                <img src="@Url.Content(Model.Image)" alt="Image" style="width:600px; height: auto;" />
             </dd>
         }
         <dt>
