--- a/Project/ItNews/Views/Article/Index.cshtml
+++ b/Project/ItNews/Views/Article/Index.cshtml
@@ -15,19 +15,17 @@
 <div>
     <hr />
     <h4>
-        @for (int i = 1; i <= Model.PageCount; i++)
+        @for (int i = 0; i < Model.PageCount; i++)
         {
+            string pageNumberText = (i + 1).ToString();
             if (i == Model.PageNumber)
             {
-                @i.ToString()
+                @pageNumberText
             }
             else
             {
-                @Html.ActionLink(Convert.ToString(i), "Index", new { itemsCount = Model.PageSize, page = i });
+                @Html.ActionLink(pageNumberText, "Index", new { itemsCount = Model.PageSize, page = i + 1 });
             }
-
         }
-
-
     </h4>
 </div>
