--- a/Project/ItNews/Views/Article/Edit.cshtml
+++ b/Project/ItNews/Views/Article/Edit.cshtml
@@ -25,12 +25,12 @@
         </div>
     </div>
 
-    @if (Model.OldImagePath != null)
+    @if (Model.OldImageName != null)
     {
         <div class="form-group">
-            @Html.LabelFor(model => model.OldImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.OldImageName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <img src="@Url.Content(Model.OldImagePath)" alt="Image" style="width: 300px; height: auto;">
+                @Html.DisplayFor(model => model.OldImageName, new { htmlAttributes = new { style = "width: 300px; height: auto;" } })
             </div>
         </div>     
     }
