--- a/Project/ItNews/Views/Article/Edit.cshtml
+++ b/Project/ItNews/Views/Article/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>View</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Article", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
