--- a/Project/ItNews/Views/Article/Details.cshtml
+++ b/Project/ItNews/Views/Article/Details.cshtml
@@ -20,7 +20,7 @@
             </dt>
 
             <dd>
-                <img src="@Model.Image" alt="Image" style="width:600px; height: auto;"/>
+                <img src="@Model.Image" alt="Image" style="width:600px; height: auto;" />
             </dd>
         }
         <dt>
@@ -43,7 +43,23 @@
         </dd>
     </dl>
 </div>
+<div>
+    @Html.Partial("CreateCommentPartial", new CreateCommentViewModel { ArticleId = Model.Id })
+    <dl class="dl-horizontal">
+        @foreach (var comment in Model.Comments)
+        {
+            <dt>
+                @Html.DisplayNameFor(model => comment.Author)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => comment.Text)
+            </dd>
+        }
+    </dl>
+</div>
+
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
