--- a/Project/ItNews/Views/Article/Details.cshtml
+++ b/Project/ItNews/Views/Article/Details.cshtml
@@ -20,7 +20,7 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.Image,  new { htmlAttributes = new { style = "width: 350px; height: auto;" } })
+                @Html.DisplayFor(model => model.Image, new { htmlAttributes = new { style = "width: 350px; height: auto;" } })
             </dd>
         }
         <dt>
@@ -43,26 +43,37 @@
         </dd>
     </dl>
 </div>
-<div>
-    @Html.Partial("CreateCommentPartial", new CreateCommentViewModel { ArticleId = Model.Id })
-    <dl class="dl-horizontal">
-        @foreach (var comment in Model.Comments)
-        {
-            <dt>
-                @Html.DisplayNameFor(model => comment.Author)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => comment.Text)
-            </dd>
-        }
-    </dl>
-</div>
+
+@if (User.Identity.IsAuthenticated)
+{
+    <div>
+        @Html.Partial("CreateCommentPartial", new CreateCommentViewModel { ArticleId = Model.Id })
+        <dl class="dl-horizontal">
+            @foreach (var comment in Model.Comments)
+            {
+                <hr />
+                <dt>
+                    @Html.DisplayNameFor(model => comment.Author)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => comment.Author)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => comment.Text)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => comment.Text)
+                </dd>
+            }
+        </dl>
+    </div>
+}
 
 <p>
     @if (Model.ControlsAvailable)
     {
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
-        @Html.ActionLink("Delete", "Delete", new { id = Model.Id }) |
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) <text>|</text>
+        @Html.ActionLink("Delete", "Delete", new { id = Model.Id }) <text>|</text>
     }
     @Html.ActionLink("Back to List", "Index")
 </p>
