--- a/Project/ItNews/Views/Article/Details.cshtml
+++ b/Project/ItNews/Views/Article/Details.cshtml
@@ -44,8 +44,6 @@
     </dl>
 </div>
 
-@if (User.Identity.IsAuthenticated)
-{
     <div>
         @Html.Partial("CreateCommentPartial", new CreateCommentViewModel { ArticleId = Model.Id })
         <dl class="dl-horizontal">
@@ -64,10 +62,12 @@
                 <dd>
                     @Html.DisplayFor(model => comment.Text)
                 </dd>
+                <p>
+                @Html.ActionLink("Delete", "DeleteComment", new { id = comment.Id, articleId = Model.Id })
+            </p>
             }
         </dl>
     </div>
-}
 
 <p>
     @if (Model.ControlsAvailable)
