delete comment can only comment's author; added comments' paging

--- a/Project/ItNews/Views/Article/Details.cshtml
+++ b/Project/ItNews/Views/Article/Details.cshtml
@@ -42,39 +42,55 @@
             @Html.DisplayFor(model => model.Date)
         </dd>
     </dl>
-</div>
-
-    <div>
-        @Html.Partial("CreateCommentPartial", new CreateCommentViewModel { ArticleId = Model.Id })
-        <dl class="dl-horizontal">
-            @foreach (var comment in Model.Comments)
-            {
-                <hr />
-                <dt>
-                    @Html.DisplayNameFor(model => comment.Author)
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => comment.Author)
-                </dd>
-                <dt>
-                    @Html.DisplayNameFor(model => comment.Text)
-                </dt>
-                <dd>
-                    @Html.DisplayFor(model => comment.Text)
-                </dd>
-                <p>
-                @Html.ActionLink("Delete", "DeleteComment", new { id = comment.Id, articleId = Model.Id })
-            </p>
-            }
-        </dl>
-    </div>
-
-<p>
     @if (Model.ControlsAvailable)
     {
         @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) <text>|</text>
-        @Html.ActionLink("Delete", "Delete", new { id = Model.Id }) <text>|</text>
+        @Html.ActionLink("Delete", "Delete", new { id = Model.Id })
     }
+</div>
+
+<div>
+    @Html.Partial("CreateCommentPartial", new CreateCommentViewModel { ArticleId = Model.Id })
+    <dl class="dl-horizontal">
+        @foreach (var comment in Model.Comments)
+        {
+            <hr />
+            <dt>
+                @Html.DisplayNameFor(model => comment.Author)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => comment.Author)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => comment.Text)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => comment.Text)
+            </dd>
+            <p>
+                @if (comment.Author == Model.UserName)
+                {
+                    @Html.ActionLink("Delete", "DeleteComment", new { id = comment.Id, articleId = Model.Id })
+                }
+            </p>
+        }
+    </dl>
+    @for (int i = 0; i < Model.commentPageCount; i++)
+    {
+        string pageNumberText = (i + 1).ToString();
+        if (i == Model.commentPageNumber)
+        {
+            @pageNumberText
+        }
+        else
+        {
+            @Html.ActionLink(pageNumberText, "Details", new {  id = Model.Id, commentPage = i+1 });
+        }
+    }
+</div>
+
+<p>
+    
     @Html.ActionLink("Back to List", "Index")
 </p>
 
