--- a/Project/ItNews/Views/Article/CreateCommentPartial.cshtml
+++ b/Project/ItNews/Views/Article/CreateCommentPartial.cshtml
@@ -11,7 +11,7 @@
             @Html.TextBoxFor(model => model.Text, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
         </div>
-        <input type="submit" value="Submit" class="btn btn-default">
+        <input type="submit" value="Send" class="btn btn-default">
     </div>
     
 }
