--- a/Project/ItNews/Views/Article/Delete.cshtml
+++ b/Project/ItNews/Views/Article/Delete.cshtml
@@ -6,6 +6,18 @@
 
 <h2>Are you sure you want to delete this?</h2>
 <div>
+    @using (Html.BeginForm("DeleteConfirmation", "Article", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.Id)
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" />
+
+        </div>
+
+    }
+</div>
+<div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,16 +57,7 @@
 
     </dl>
 
-    @using (Html.BeginForm("DeleteConfirmation", "Article", FormMethod.Post))
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.Id)
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" />
-
-        </div>
-        <div class="form-actions no-color">
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+    <div class="form-actions no-color">
+        @Html.ActionLink("Back to List", "Index")
+    </div>
 </div>
