--- a/Project/ItNews/Views/Shared/_Layout.cshtml
+++ b/Project/ItNews/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 @Html.ActionLink("ItNews", "Index", "Article", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav" >
+                <ul class="nav navbar-nav">
 
                     @if (User.Identity.IsAuthenticated)
                     {
@@ -29,10 +29,20 @@
                     <li style="margin-left:10px;margin-right:10px;">
                         @Html.Partial("LoginPartial")
                     </li>
-                    @if (User.Identity.IsAuthenticated)
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                     {
-                       <li>@Html.ActionLink("Admin Panel", "Panel", "AdminPanel", new { }, new { @class = "navbar-brand" })</li>
+                        <li>@Html.ActionLink("Admin Panel", "Panel", "AdminPanel", new { }, new { @class = "navbar-brand" })</li>
                     }
+                    <li style="margin-left: 600px; text-align: right; margin-top: 7px;">
+                        @using (Html.BeginForm("ProviderType", "Configuration", FormMethod.Post, new { @class = "navbar-right" }))
+                        {
+                            <select name="providerType" style="margin-top: 10px">
+                                <option value="DB">DB</option>
+                                <option value="Memory">Memory</option>
+                            </select>
+                            <input type="submit" class="btn" style="float: right; margin-left: 5px; margin-right: 20px; margin-top: 3px">
+                        }
+                    </li>
                 </ul>
             </div>
         </div>
