--- a/Project/ItNews/Views/Shared/_Layout.cshtml
+++ b/Project/ItNews/Views/Shared/_Layout.cshtml
@@ -38,14 +38,14 @@
                     {
                         <li>@Html.ActionLink("Admin Panel", "Panel", "AdminPanel", new { }, new { @class = "navbar-brand" })</li>
                     }
-                    <li style="margin-left: 600px; text-align: right; margin-top: 7px;">
+                    <li style="margin-left: 500px; text-align: right; margin-top: 7px;">
                         @using (Html.BeginForm("ProviderType", "Configuration", FormMethod.Post, new { @class = "navbar-right" }))
                         {
                             <select name="providerType" style="margin-top: 10px">
                                 <option value="DB" @(currentProviderType == "DB" ? "selected" : "")>DB</option>
                                 <option value="Memory"@(currentProviderType == "Memory" ? "selected" : "")>Memory</option>
                             </select>
-                            <input type="submit" class="btn" style="float: right; margin-left: 5px; margin-right: 20px; margin-top: 3px">
+                            <input type="submit" value="Select" class="btn" style="float: right; margin-left: 5px; margin-right: 20px; margin-top: 3px">
                         }
                     </li>
                 </ul>
