rename Memory->File in layout

--- a/Project/ItNews/Views/Shared/_Layout.cshtml
+++ b/Project/ItNews/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                         {
                             <select name="providerType" style="margin-top: 10px">
                                 <option value="DB" @(currentProviderType == "DB" ? "selected" : "")>DB</option>
-                                <option value="Memory"@(currentProviderType == "File" ? "selected" : "")>File</option>
+                                <option value="File"@(currentProviderType == "File" ? "selected" : "")>File</option>
                             </select>
                             <input type="submit" value="Select" class="btn" style="float: right; margin-left: 5px; margin-right: 20px; margin-top: 3px">
                         }
