--- a/Project/ItNews/Views/Article/CreateCommentPartial.cshtml
+++ b/Project/ItNews/Views/Article/CreateCommentPartial.cshtml
@@ -2,6 +2,7 @@
 
 @using (Html.BeginForm("CreateComment", "Article"))
 {
+    @Html.AntiForgeryToken();
     <hr />
     <h3>Comments</h3>
     @Html.HiddenFor(model => model.ArticleId)
