--- a/Project/ItNews/Views/Article/Index.cshtml
+++ b/Project/ItNews/Views/Article/Index.cshtml
@@ -2,11 +2,16 @@
 @{
     ViewBag.Title = "News list";
 }
-<div>
+@Html.Partial("SearchFieldPartial")
+
+@section Scripts {
+    @Scripts.Render("~/Scripts/SearchField.js")
+}
+<div style="margin-top: 65px;">
     @foreach (var item in Model.Articles)
     {
         <hr />
-        <h4>@Html.ActionLink(item.Title,"Details", new { id = item.Id })</h4>
+        <h4>@Html.ActionLink(item.Title, "Details", new { id = item.Id })</h4>
         <p>@item.TextPreview</p>
         <p>@Html.DisplayNameFor(model => item.Author): @item.Author</p>
         <p>@Html.DisplayNameFor(model => item.Date): @item.Date</p>
@@ -29,3 +34,4 @@
         }
     </h4>
 </div>
+
