User profile caching

--- a/Project/ItNews/Views/UserPanel/Panel.cshtml
+++ b/Project/ItNews/Views/UserPanel/Panel.cshtml
@@ -1,4 +1,4 @@
-﻿@model ItNews.Mvc.ViewModels.AdminPanel.PanelViewModel
+﻿@model ItNews.Mvc.ViewModels.UserProfile.UserProfileViewModel
 
 @{
     ViewBag.Title = "View";
